fixed styles when only numpad is visible

--- a/src/components/Keyboard/styles.scss
+++ b/src/components/Keyboard/styles.scss
@@ -4,10 +4,11 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
-
+  justify-content: center;
+  
   .num-pad-container {
     flex: 1 1 15%;
+    max-width: 450px;
   }
 
   .center-board-container {
@@ -19,21 +20,23 @@
   }
 
   .board-margin {
-    flex: 1 1 2.5%
+    flex-basis: 2.5%;
   }
 
   .enter-key-area {
     height: 100%;
-    flex: 1 1 10%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     .backspace-icon {
       $backspace-key-color: #8C8C8C;
 
       width: 60%;
+      height: 35%;
+      transform: translateX(-5%);
+
       border-radius: 0.5rem;
       background-color: transparent;
       
@@ -75,7 +78,7 @@
 
     .return-key-container {
       width: 60%;
-      padding-top: 10px;
+      height: 35%;
       $return-key-color: #1868FC;
 
       .return-key-component {
